--- a/ResiliaPet.css
+++ b/ResiliaPet.css
@@ -1,41 +1,65 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Train+One&display=swap');
 header {
-    background-color: blue;
+    background-color: rgb(88, 88, 88);
     border-radius: 4px;
     width: 100%;
+    height: 100px;
     display: flex;
     justify-content: space-between;
-    font-size: large;
+    align-items: center;
+    font-size:medium;
+    box-sizing: border-box;
 }
 .menu {
-    background-color: blue;
+    background-color: black;
     display: flex;
     flex-direction: row;
     padding: auto;
-}
-.menu:hover {
-    background-color: #ccc;
 }
 a {
     text-decoration: none;
 }
 h2 {
-    color: black;
+    color: rgb(110, 110, 110);
     padding-left: 10px;
 }
 h2:hover {
     color:white;
+    transition: color 2s;
 }
 .logo { 
     font-size: large;
     width: 100%;
     padding: auto;
     margin: 0 auto;
+    font-family: 'Anton', sans-serif;
 }
 .logo:hover {
-    font-size: xx-large;
+    font-size: x-large;
     color: #ccc;
+    transition-duration: 3s;
 }
-@media screem and (max-width:700px){
+main {
+    display: flex;
+    flex-wrap:nowrap;
+    flex-direction: column;
+}
+.imagens {
+    display: flex;
+    flex-direction: row;
+}
+main img {
+    width: 25%;
+    height: auto;
+    box-sizing: border-box;
+}
+img:hover {
+    border: 5px solid rgb(88, 88, 88);
+}
+@media screen and (max-width:700px){
+    header {
+        height: 250px;
+    }
     .logo{
         display: none;
     } 
@@ -45,4 +69,29 @@ h2:hover {
         width: 100%;
         align-items: center;
     }
+    .imagens {
+        flex-direction: column;
+        width: 100vw;
+    }
+    main {
+        padding-top: auto;
+    }
+    main img {
+        width: 100%;
+        height: auto;
+    }
+}
+footer {
+    background-color: rgb(88, 88, 88);
+    border-radius: 4px;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size:medium;
+    box-sizing: border-box;
+}
+footer:hover { 
+    color: #ccc;
 }
